# open-reading

./: .gitignore  .metadata  CHANGELOG.md  CODEBASE_DOCUMENTATION.md  CONTRIBUTING.md  DESIGN.md  LICENSE-MIT-LEGACY  LICENSING.md  Project.md  README.en.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-TW.md  SOURCE_POLICY.md  TRADEMARKS.md  build.md  flutter_launcher_icons.yaml  l10n.yaml  pubspec.yaml  structure.md
server/open-reading-web/: .env.example  .gitignore  README.md  pyproject.toml
server/open-reading-web/app/: __init__.py  config.py  database.py  main.py  models.py
server/open-reading-web/app/repositories/: downloads.py  releases.py
server/open-reading-web/app/routes/: admin.py  api.py  public.py
server/open-reading-web/app/services/: android_package.py  auth.py  download_stats.py  github_release.py  release_files.py  release_import.py
server/open-reading-web/app/templates/: TEMPLATE_CONTEXT.md  (+6 more)
server/open-reading-web/deploy/: Caddyfile.open-reading  backup.sh  import_release.sh  open-reading-backup.service  open-reading-backup.timer  open-reading-web.service  publish.sh
server/open-reading-web/scripts/: check_production.sh  import_release.py  migrate.py  seed_platforms.py  verify_official_download.py
server/open-reading-web/tests/: conftest.py  test_android_package.py  test_auth.py  test_deploy_contract.py  test_github_release_verifier.py  test_public_routes.py  test_release_domain.py  test_release_files.py  test_release_integration.py  test_security_contract.py  test_update_distribution.py  test_verify_official_download.py
(+531 files in other folders)
